# plague-sim

./: .gitignore  Cargo.toml
examples/2d-plague-sim/: main.rs  simulation.rs  simulation_data.json
src/: bin.rs  config.rs  connections.txt  countries.txt  lib.rs  location.rs  math_utils.rs  pathogen.rs  point.rs  populated_area.rs  population.rs  population_types.rs  region.rs  region_transportation_mediator.rs  simulation_data.rs  simulation_geography.rs  transportation.rs  transportation_allocator.rs  transportation_graph.rs
src/pathogen/: pathogen_types.rs  pathogen_utils.rs
src/pathogen/pathogen_types/: spontaneous_pathogen.rs
src/pathogen/pathogen_utils/: growth_functions.rs
src/pathogen_types/: pathogen.rs
src/population_types/: populated_area.rs  population.rs
test_data/: data.json
