[package]
name = "plague-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.1"
rand_distr = "0.4.3"
serde_json = "1.0" 
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "functionality"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"

[dev-dependencies]
macroquad = "0.4"

[[example]]
name = "2d-plague-sim"
path = "examples/2d-plague-sim/main.rs"
